--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.4",
-    "@react-native-picker/picker": "2.9.0"
+    "@react-native-picker/picker": "2.9.0",
+    "expo-notifications": "~0.29.8",
+    "expo-task-manager": "~12.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
